# GCALGO

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
cmake/: FetchDependencies.cmake
data/: Sample Input.json  base.json
src/: customer.h  parseJsonInfo.cpp  parseJsonInfo.h  pickup.cpp  pickup.h  routes.cpp  routes.h  vehicle.h
src/baseEntities/: baseStation.h  customer.h  pickup.h  vehicle.h
src/report/: routesReport.h
src/utils/: conversion.h
tests/: CMakeLists.txt  main.cpp  test_utils.h
